--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -202,14 +202,14 @@
 \item This handout will guide you through an introductory tutorial for the OpenMS/TOPP software package~\cite{OpenMS}.
 \item OpenMS~\cite{Sturm2008,rost2016openms} is a versatile open-source library for mass spectrometry data analysis. Based on this library, we offer a collection
       of command-line tools ready to be used by end users. These so-called TOPP tools (short for ''The OpenMS Proteomics Pipeline'')~\cite{Kohlbacher2007} can be understood as
-      small building blocks of arbitrary complex data analysis workflows.
+      small building blocks of arbitrarily complex data analysis workflows.
 \item In order to facilitate workflow construction, OpenMS was integrated into KNIME~\cite{KNIME}, the Konstanz
 			Information Miner, an open-source integration platform providing a powerful and flexible workflow system
 			combined with advanced data analytics, visualization, and report capabilities. Raw MS data as well as the
 			results of data processing using TOPP can be visualized using TOPPView~\cite{Sturm2009}.
 \item This tutorial was designed for use in a hands-on tutorial session but can also be worked through at home using the online resources. You will become familiar with some of the basic functionalities of OpenMS/TOPP, TOPPView, and KNIME
       and learn how to use a selection of TOPP tools used in the tutorial workflows.
-\item All sample data referenced in this tutorial can be found in the \directory{Example\_Data} folder on the USB stick that came with this tutorial (or released online on our github page
+\item All sample data referenced in this tutorial can be found in the \directory{Example\_Data} folder on the USB stick that came with this tutorial (or released online on our GitHub page
 \hyperlink{https://github.com/OpenMS/Tutorials/releases}{OpenMS/Tutorials}).
 \end{itemize}
 
