updated some images to new KNIME style

--- a/Handout/labelfree.tex
+++ b/Handout/labelfree.tex
@@ -70,7 +70,7 @@ Meta nodes are useful when you construct even larger workflows and want to keep 
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.85\textwidth]{graphics/labelfree/fdr_peptide_identification}
+  \includegraphics[width=\textwidth]{graphics/labelfree/PepIdFDR.png}
   \caption{OMSSA ID pipeline including FDR filtering.}
   \label{fig:id_fdr}
 \end{figure}
@@ -96,12 +96,12 @@ We can connect this to the \KNIMENODE{PeptideIndexer} and go along with our exis
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.85\textwidth]{graphics/labelfree/consensus_id}
+  \includegraphics[width=\textwidth]{graphics/labelfree/PepConsensusID.png}
   \caption{Complete consensus identification workflow.}
   \label{fig:consensusid}
 \end{figure}
 
-
+\newpage
 \subsection{Quantification}
 \label{Labelfree_Quantification}
 
@@ -135,7 +135,7 @@ Now, click on the small triangle next to that icon and select \texttt{Peptide id
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.85\textwidth]{graphics/labelfree/lfq_no_align}
+  \includegraphics[width=\textwidth]{graphics/labelfree/PepQuantIdNoAlign.png}
   \caption{Extended workflow featuring peptide identification and quantification.}
   \label{fig:ff_idmapping}
 \end{figure}
@@ -147,7 +147,7 @@ So far, we successfully performed peptide identification as well as quantificati
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.85\textwidth]{graphics/labelfree/lfq}
+  \includegraphics[width=\textwidth]{graphics/labelfree/PepQuantId.png}
   \caption{Complete identification and label-free quantification workflow.}
   \label{fig:complete_without_consensusid}
 \end{figure}
