--- a/Handout/metabolomics.tex
+++ b/Handout/metabolomics.tex
@@ -295,12 +295,15 @@ In this part of the tutorial, we take a look on how metabolite spectra can be id
 Because these libraries tend to be large we don't distribute them with OpenMS. 
 
 \begin{task}
-Please copy the spectral library: \newline
-\directory{Example\_Data \textbackslash Metabolomics \textbackslash databases \textbackslash MetaboliteSpectralDB.mzML} from the USB stick into the directory of your KNIME installation.
-\newline
-Navigate to your KNIME folder (On Window \directory{C: \textbackslash Program Files \textbackslash KNIME3.3 \newline \textbackslash plugins \textbackslash de.openms.win32.x86\_64\_2.1.0.201703301405 \textbackslash payload \textbackslash share \textbackslash OpenMS \textbackslash CHEMISTRY \textbackslash}).
-Now construct the workflow shown in Figure~\ref{fig:speclib}.
-Use the file \directory{Example\_Data \textbackslash Metabolomics \textbackslash datasets \newline \textbackslash Metabolite\_ID\_SpectraDB\_positive.mzML} as input for your workflow. It contains tandem spectra that are identified by the \KNIMENODE{MetaboliteSpectralMatcher}. The resulting mzTab file is read back into a KNIME table and stored in an Excel table. Make sure that you connect the MzTabReader port corresponding to the Small Molecule Section to the \KNIMENODE{Excel writer (XLS)}).
+Please copy the spectral library from \\
+\directory{Example\_Data / Metabolomics / databases / MetaboliteSpectralDB.mzML}\\
+on the USB stick into the following directory of your KNIME installation (version numbers and dates may differ slightly):
+\begin{itemize}
+	\item Windows \newline \directory{C: / Program Files / KNIME3.3 / plugins \newline/ de.openms.win32.x86\_64\_2.1.0.201703301405 / payload / share / OpenMS / CHEMISTRY}
+	\item macOS \newline \directory{ Applications/ KNIME 3.3.app / Contents / Eclipse / plugins \newline / de.openms.win32.x86\_64\_2.1.0.201703301405 / payload / share / OpenMS / CHEMISTRY}
+\end{itemize}
+Now construct the workflow as shown in Figure~\ref{fig:speclib}.
+Use the file \directory{Example\_Data / Metabolomics / datasets \newline / Metabolite\_ID\_SpectraDB\_positive.mzML} as input for your workflow. It contains tandem spectra that are identified by the \KNIMENODE{MetaboliteSpectralMatcher}. The resulting mzTab file is read back into a KNIME table and stored in an Excel table. Make sure that you connect the MzTabReader port corresponding to the Small Molecule Section to the \KNIMENODE{Excel writer (XLS)}).
 \end{task}
 
 \begin{figure}[htbp]
