added URL to link

--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -42,8 +42,8 @@ and follow the instructions.
 \subsubsection{Installation from the internet}
 If you are working through this tutorial at home you can get the installers under the following links:
 \begin{itemize}
-  \item \href{http://www.openms.de/downloads}{OpenMS}
-  \item \href{https://www.knime.org/downloads/overview}{KNIME}
+  \item \href{http://www.openms.de/downloads}{OpenMS: http://www.openms.de/downloads}
+  \item \href{https://www.knime.org/downloads/overview}{KNIME: https://www.knime.org/downloads/overview}
   \item OpenMS prerequisites (Windows-only): After installation, before your first use of the OpenMS plugin in KNIME you will be asked to download it automatically if certain requirements are not found in your Windows registry. Alternatively, you can get a bundled version \href{\WindowsPrerequisitesLink}{here}.
 \end{itemize}
 Choose the installers for the platform you are working on. We suggest using the full installers of KNIME. It includes all free community extensions so that you can skip the installation of the OpenMS plugin and other dependencies for the example workflows later.
