--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -121,7 +121,7 @@ We will make use of these later throughout the tutorial. Let's start with a firs
         \begin{itemize}
         \item Is activated by default (though each loaded spectra file is displayed zoomed out first, so you do not need to scroll).
         \item Allows you to browse your data by moving around in RT and m/z range.
-        \item When zoomed in, to scroll the spectra map, click-drag on the current view.
+        \item When zoomed in, you can scroll through the spectra. Click-drag on the current view.
         \item Arrow keys can be used to scroll the view as well.
         \end{itemize}
     \item Zoom mode
