--- a/Handout/metabolomics.tex
+++ b/Handout/metabolomics.tex
@@ -320,7 +320,7 @@ Run the workflow and inspect the output.
 
 \subsubsection{Manual validation}
 
-In metabolomics, matches between tandem spectra and spectral libraries are manually validated. Several commercial and free online resources exist that exist in that task. Some examples are:
+In metabolomics, matches between tandem spectra and spectral libraries are manually validated. Several commercial and free online resources exist which help in that task. Some examples are:
 
 \begin{itemize}
 \item mzCloud contains only spectra from Thermo Orbitrap instruments. The webpage requires Microsoft Silverlight which currently does not work in modern browsers (see \url{https://www.mzcloud.org/DataViewer}).
