--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -1,11 +1,12 @@
 %!TEX root = handout.tex
 
-% file names are changed quite often between tutorial so make them configurable at the top		
+% File names are changed quite often between tutorial so make them configurable at the top.
+% Please escape whitespaces except before and after / as a path separator.
 \newcommand{\WindowsKnimeInstallerName}{Windows / KNIME\ Full\ 3.3.1\ Installer\ (64bit).exe}	
 \newcommand{\WindowsOpenMSInstallerName}{Windows / OpenMS-2.1.0\_Win64\_setup.exe}	
 \newcommand{\WindowsOpenMSPrereqInstallerName}{Windows / OpenMS-2.1-prerequisites-installer.exe}
 \newcommand{\WindowsPrerequisitesLink}{http://sourceforge.net/projects/open-ms/files/OpenMS/OpenMS-1.10/OpenMS-1.10-win32-prerequisites-installer.exe/download}
-\newcommand{\WindowsDefaultPWizFolder}{C: / Program Files / OpenMS-2.1.0 / share / OpenMS / THIRDPARTY / pwiz-bin}
+\newcommand{\WindowsDefaultPWizFolder}{C: / Program\ Files / OpenMS-2.1.0 / share / OpenMS / THIRDPARTY / pwiz-bin}
 \newcommand{\MacKnimeInstallerName}{Mac / knime-full\_3.3.1.app.macosx.cocoa.x86\_64.dmg}	
 \newcommand{\MacOpenMSInstallerName}{Mac / OpenMS-2.1.0\_Mac.dmg}
 \newcommand{\KnimeUpdateSite}{http://update.knime.org/analytics-platform/3.3}
@@ -24,29 +25,30 @@ Before we get started we will install OpenMS and KNIME. If you take part in a tr
 \subsubsection{Installation from the OpenMS USB stick}
 Please choose the directory that matches your operating system and execute the installer. 
 
-For example for Windows you call
+For example for \textbf{Windows} you call
 \begin{itemize}
   \item the OpenMS installer: \directory{\WindowsOpenMSInstallerName}
   \item the KNIME installer:  \directory{\WindowsKnimeInstallerName}
   \item OpenMS prerequisites (Windows-only): After installation, before your first use of the OpenMS plugin in KNIME you will be asked to download it automatically if certain requirements are not found in your Windows registry. Alternatively, you can get a bundled version \href{\WindowsPrerequisitesLink}{here} or on the OpenMS USB stick (\directory{\WindowsOpenMSPrereqInstallerName}).
 \end{itemize}
 
-on Mac you call
+on \textbf{macOS} you call
 \begin{itemize}
   \item the OpenMS installer: \directory{\MacOpenMSInstallerName}
   \item the KNIME installer: \directory{\MacKnimeInstallerName}
 \end{itemize}
 
-and follow the instructions. 
+and follow the instructions. For the OpenMS installation on macOS, you need to accept the license drag and drop the OpenMS folder into your Applications folder.
+On \textbf{Linux} you can extract KNIME to a folder of your choice and for TOPPView you need to install OpenMS via your package manager or build it on your own with the instructions under \href{https://www.openms.de/documentation}{www.openms.de/documentation}.
 
 \subsubsection{Installation from the internet}
 If you are working through this tutorial at home you can get the installers under the following links:
 \begin{itemize}
-  \item \href{http://www.openms.de/downloads}{OpenMS: http://www.openms.de/downloads}
-  \item \href{https://www.knime.org/downloads/overview}{KNIME: https://www.knime.org/downloads/overview}
+  \item OpenMS: \href{https://www.openms.de/download/openms-binaries}{ https://www.openms.de/download/openms-binaries}
+  \item KNIME: \href{https://www.knime.org/downloads/overview}{ https://www.knime.org/downloads/overview}
   \item OpenMS prerequisites (Windows-only): After installation, before your first use of the OpenMS plugin in KNIME you will be asked to download it automatically if certain requirements are not found in your Windows registry. Alternatively, you can get a bundled version \href{\WindowsPrerequisitesLink}{here}.
 \end{itemize}
-Choose the installers for the platform you are working on. We suggest using the full installers of KNIME. It includes all free community extensions so that you can skip the installation of the OpenMS plugin and other dependencies for the example workflows later.
+Choose the installers for the platform you are working on. We suggest using the full installers of KNIME. It includes all free community extensions so that you can skip the installation of the OpenMS plugin and most other dependencies for the example workflows later.
 
 \subsection{Data conversion}
 \label{Data_Conversion}
@@ -69,15 +71,16 @@ MSConvertGUI (see Figure~\ref{fig:MSConvertGUI}) exposes the main parameters for
 \centering
 \includegraphics[width=12cm]{graphics/introduction/proteowizard.png}
 \caption{MSConvertGUI (ProteoWizard), allows converting raw files to mzML. Select the raw files you want to convert by clicking on the browse button and then on "Add". Default parameters can usually be kept as-is. To reduce the initial data size, make sure that the peakPicking filter (converts profile data to centroided data) is listed, enabled (true) and applied to all MS levels (parameter "1-"). Start the conversion process by clicking on the "Start" button.}
-\label{fig:proteowizard}
+\label{fig:MSConvertGUI}
 \end{figure}
 
 \subsubsection{msconvert}
 The msconvert command line tool offers more options than the graphical tool MSConvertGUI. It allows converting large numbers of files and can be easier automatized.
-
+\newline
 To convert and pick the file \textit{raw\_data\_file.RAW} you may write:
 \newline
-\menu{msconvert raw\_data\_file.RAW --filter "peakPicking true 1-"}
+%% -{}- avoids latex ligatures
+\menu{msconvert raw\_data\_file.RAW -{}-filter "peakPicking true 1-"}
 \newline
 in your command line.
 \newline
@@ -85,7 +88,7 @@ To convert all RAW files in a folder may write:
 \newline
 \menu{msconvert *.RAW -o my\_output\_dir}
 \newline
-\note{To display all options you may type \texttt{msconvert --help}. Additional information is available on the ProteoWizard web page.}
+\note{To display all options you may type \menu{msconvert -{}-help}. Additional information is available on the ProteoWizard web page.}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -106,7 +109,7 @@ We will guide you through some of the basic features of \OPENMSTOOL{TOPPView}. P
 We will make use of these later throughout the tutorial. Let's start with a first look at one of the files of our tutorial data set:
 
 \begin{itemize}
-\item Start \OPENMSTOOL{TOPPView} (see Start-Menu or Applications on MacOS)
+\item Start \OPENMSTOOL{TOPPView} (see Windows' Start-Menu or \directory{Applications/OpenMS} on macOS)
 \item Go to \menu{File > Open File}, navigate to the directory where you copied the contents of the USB stick to,
       and select
       \directory{Example\_Data / Introduction / datasets / small / velos005614.mzML}
@@ -127,15 +130,15 @@ We will make use of these later throughout the tutorial. Let's start with a firs
     \item Zoom mode
         \begin{itemize}
         \item Zooming into the data: either mark an area in the current view with your mouse while holding the left mouse
-              button plus the \keys{\ctrl} key to zoom to this area
+              button plus the \keys{\ctrlwin} key to zoom to this area
               or use your mouse wheel to zoom in and out.
         \item All previous zoom levels are stored in a zoom history. The zoom history can be traversed using
-              \keys[,]{\ctrl,+} or \keys[,]{\ctrl,-} or the mouse wheel (scroll up and down).
-        \item Pressing \keys{Backspace} zooms out to show the full LC-MS map (and also resets the zoom history).
+              \keys[,]{\ctrlwin,+} or \keys[,]{\ctrlwin,-} or the mouse wheel (scroll up and down).
+        \item Pressing backspace \keys{\, \backspace \,\,} zooms out to show the full LC-MS map (and also resets the zoom history).
         \end{itemize}
     \item Measure mode
         \begin{itemize}
-        \item It is activated using the \keys{\shift} (shift) key.
+        \item It is activated using the \keys{\, \shift \,\,\, } (shift) key.
         \item Press the left mouse button down while a peak is selected and drag the mouse to
         			another peak to measure the distance between peaks.
         \item This mode is implemented in the 1D and 2D mode only.
@@ -144,9 +147,9 @@ We will make use of these later throughout the tutorial. Let's start with a firs
 \item Right click on your 2D map and select \menu{Switch to 3D view} and examine your
 			data in 3D mode
 \item Go back to the 2D view. In 2D mode, visualize your data in different normalization modes, use linear, percentage and log-view (icons on the upper left tool bar).
-\note{On \textit{Apple OS X}, due to a bug in one of the external libraries used by OpenMS, you will see a small window of the 3D mode when switching to 2D. Close the 3D tab in order to get rid of it.}
+\note{On \textit{macOS}, due to a bug in one of the external libraries used by OpenMS, you will see a small window of the 3D mode when switching to 2D. Close the 3D tab in order to get rid of it.}
 \item In \OPENMSTOOL{TOPPView} you can also execute TOPP tools. Go to
-			\menu{Tools > Apply tool (whole layer)} and choose a TOPP tool (e.g., FileInfo) and
+			\menu{Tools > Apply tool (whole layer)} and choose a TOPP tool (e.g., \OPENMSTOOL{FileInfo}) and
 			inspect the results.
 \end{itemize}
 
