Reenabled all chapters.

--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -224,11 +224,11 @@
 
 \include{metabolomics}
 
-%\include{openswath}
+\include{openswath}
 
-%\include{pyopenms}
+\include{pyopenms}
 
-%\include{qualitycontrol}
+\include{qualitycontrol}
 
 \include{troubleshooting}
 
